fix navbar on mobile

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -8,7 +8,7 @@
         height: calc(1.575rem + 0.3vw);
         margin-top: -0.5rem;
         margin-left: -0.4rem;
-        margin-right: -0.5rem;
+        margin-right: -0.4rem;
     }
 
 }
